ทำ Validators ของระบบ Diagnosis - close #211
