# backend/docs/swagger.json
@@ -3329,6 +3329,10 @@
                     "description": "SurveillancePeriod holds the value of the \"SurveillancePeriod\" field.",
                     "type": "string"
                 },
+                "Treatment": {
+                    "description": "Treatment holds the value of the \"Treatment\" field.",
+                    "type": "string"
+                },
                 "edges": {
                     "description": "Edges holds the relations/edges for other nodes in the graph.\nThe values are being populated by the DiagnosisQuery when eager-loading is set.",
                     "type": "object",
